# cellular5

./: .gitignore  Cargo.toml  constants.default.yml  d2utmpTOfts2
cellular4/: Cargo.toml  TODOandIdeas
cellular4/shaders/: vertex.glsl
cellular4/shaders/shadertoy/: basic.glsl
cellular4/src/: arena_start.rs  arena_wrappers.rs  camera.rs  constants.rs  coordinate_set.rs  data_set.rs  datatype.rs  gamepad.rs  gfx_renderer.rs  history.rs  main.rs  mic.rs  mutagen_args.rs  node.rs  node_set.rs  preloader.rs  prelude.rs  profiler.rs  term.rs  ui.rs  update_stat.rs  updatestate.rs  util.rs
cellular4/src/camera/: linux.rs  windows.rs
cellular4/src/datatype/: automata_rules.rs  buffers.rs  color_blend_functions.rs  colors.rs  complex.rs  constraint_resolvers.rs  continuous.rs  discrete.rs  distance_functions.rs  frame_renderers.rs  image.rs  iterative_results.rs  noisefunctions.rs  point_sets.rs  points.rs  reseeders.rs  rules.rs
cellular4/src/datatype/image/: downloader.rs
cellular4/src/datatype/image/downloader/: gfycat.rs  lorem_picsum.rs  smithsonian.rs
cellular4/src/node/: automata_nodes.rs  color_blend_nodes.rs  color_nodes.rs  complex_nodes.rs  constraint_resolver_nodes.rs  continuous_nodes.rs  coord_map_nodes.rs  discrete_nodes.rs  distance_function_nodes.rs  frame_renderer_nodes.rs  iterative_function_nodes.rs  matrix_nodes.rs  noise_nodes.rs  point_nodes.rs  point_set_nodes.rs
cellular4/src/ui/: fancy.rs  simple.rs
cellular5/: Cargo.toml
cellular5/shaders/shadertoy/: basic.glsl
cellular5/src/: arena_wrappers.rs  camera.rs  constants.rs  coordinate_set.rs  data_set.rs  datatype.rs  gamepad.rs  history.rs  main.rs  mic.rs  mutagen_args.rs  old.old  opts.rs  prelude.rs  update_stat.rs  util.rs
cellular5/src/camera/: linux.rs  windows.rs
cellular5/src/datatype/: frame_renderers.rs  image.rs
cellular5/src/datatype/image/: downloader.rs
cellular5/src/datatype/image/downloader/: gfycat.rs  lorem_picsum.rs  smithsonian.rs
cellular5/src/node/: color_blend_nodes.rs  color_nodes.rs  complex_nodes.rs  continuous_nodes.rs  coord_map_nodes.rs  discrete_nodes.rs  iterative_function_nodes.rs  matrix_nodes.rs  point_nodes.rs  point_set_nodes.rs
cellular5/src/ui/: fancy.rs  simple.rs
dot-serde/: Cargo.toml
dot-serde/examples/: simple.rs
dot-serde/src/: error.rs  lib.rs  ser.rs  util.rs
mutagen/: Cargo.toml
mutagen-derive/: Cargo.toml
mutagen-derive/src/: lib.rs
mutagen/src/: lib.rs
shadertoy/: Cargo.toml
shadertoy/src/: lib.rs
