[package]
name = "cellular4"
version = "0.1.0"
authors = ["CodeBunny"]
edition = "2018"

[dependencies]
mutagen = { path = "../mutagen" }
dot-serde = { path = "../dot-serde" }

chrono = "0.4.10"
failure = { version = "0.1.6", features = ["backtrace"] }
fern = "0.5.9"
generational-arena = "*"
ggez = "0.5.1"
image = "0.22.5"
itertools = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.8"
ndarray = { version = "0.13.0", features = ["rayon"] }
nalgebra = { version = "0.21.0", features = ["serde-serialize"] }
num = "0.2"
noise = "0.6.0"
palette = "0.5.0"
rand = "0.7.3"
rand_pcg = "0.2.1"
rayon = "1.3.0"
reqwest = { version = "0.10.1", features = ["blocking"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.12"
structopt = "0.3.9"
walkdir = "2.3.1"
bresenham = "0.1.1"
float-ord = "0.2.0"
opener = "0.4.1"
regex = "1.3.9"
cpu-monitor = "0.1.1"
approx = "0.3.2"
termion = "1.5.5"
