[package]
name = "cellular4"
version = "0.1.0"
authors = ["CodeBunny"]
edition = "2018"

[dependencies]
mutagen = { path = "../mutagen", features = ["serde"] }
dot-serde = { path = "../dot-serde" }

# TODO Update this to 0.6.0 once that's released
ggez = { git = "https://github.com/cerebralcourt/ggez.git", branch = "patch-1" }

approx = "0.4.0"
bresenham = "0.1.1"
chrono = { version = "0.4.10", features = ["serde"] }
cpu-monitor = "0.1.1"
failure = { version = "0.1.6", features = ["backtrace"] }
fern = "0.6.0"
float-ord = "0.3.1"
generational-arena = { version = "0.2.8", features = ["serde"] }
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
image = "0.23.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.8"
nalgebra = { version = "0.26.0", features = ["serde-serialize"] }
ndarray = { version = "0.15.1", features = ["rayon", "serde"] }
noise = { version = "0.7.0", default-features = false }
num = "0.4.0"
opener = "0.4.1"
palette = "0.5.0"
rand = "0.8.3"
rand_pcg = "0.3.0"
rayon = "1.3.0"
regex = "1.3.9"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde_json = "1.0.61"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.12"
structopt = "0.3.9"
walkdir = "2.3.1"
lerp = "0.4.0"
cpal = "0.13.2"
realfft = "2.0.1"
odds = "0.4.0"
apodize = "1.0.0"
average = "0.12.0"

[target.'cfg(unix)'.dependencies]
termion = "1.5.5"
