[package]
name = "cellular5"
version = "0.1.0"
authors = ["CodeBunny"]
edition = "2018"

[dependencies]
mutagen = { git = "https://github.com/Palladinium/mutagen.git", branch = "master", features = ["serde"] }
dot-serde = { path = "../dot-serde" }

protoplasm = { git = "https://github.com/CodeConiglietto/protoplasm.git", branch = "master" }
ggez = "0.7.0"

apodize = "1.0.0"
approx = "0.5.1"
average = "0.12.0"
bresenham = "0.1.1"
chrono = { version = "0.4.10", features = ["serde"] }
cpal = "0.13.2"
cpu-monitor = "0.1.1"
failure = { version = "0.1.6", features = ["backtrace"] }
fern = "0.6.0"
float-ord = "0.3.1"
generational-arena = { version = "0.2.8", features = ["serde"] }
gfx = "0.18.2"
gfx_device_gl = "0.16.2"
image = "0.24.1"
itertools = "0.10.0"
lazy_static = "1.4.0"
lerp = "0.4.0"
log = "0.4.8"
ndarray = { version = "0.15.1", features = ["rayon", "serde"] }
noise = { version = "0.7.0", default-features = false }
num = "0.4.0"
odds = "0.4.0"
opener = "0.4.1"
palette = "0.5.0"
rand = "0.8.3"
rand_pcg = "0.3.0"
rayon = "1.3.0"
realfft = "2.0.1"
regex = "1.3.9"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde_json = "1.0.61"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.12"
structopt = "0.3.9"
walkdir = "2.3.1"

[target.'cfg(unix)'.dependencies]
termion = "1.5.5"
rscam = "0.5.5"

[target.'cfg(windows)'.dependencies]
escapi = "4.0.0"