[package]
name = "shadertoy"
version = "0.1.0"
authors = ["Patrick Chieppe <patrick.chieppe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
serde = { version = "1.0.116", features = ["derive"] }
url = "2.1.1"
serde_json = "1.0.58"
failure = "0.1.8"
chrono = { version = "0.4.19", features = ["serde"] }
